<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Aplicación de Bienestar</string>
    <string name="te_estabamos_esperando">¡TE ESTÁBAMOS ESPERANDO!</string>
    <string name="email_label">EMAIL:</string>
    <string name="contrasena_label">CONTRASEÑA:</string>
    <string name="completa_tus_datos">COMPLETA TUS DATOS</string>
    <string name="registrate_label">REGÍSTRATE</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="te_damos_la_bienvenida_label">¡TE DAMOS LA BIENVENIDA!</string>
    <string name="content_description_logo">Logo de la aplicación</string>
    <string name="hint_correo">Correo electrónico</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="registrate_con_nosotros">Regístrate con nosotros</string>
    <string name="como_te_gustaria_que_te_llamemos">¿Cómo te gustaría que te llamemos?</string>
    <string name="dejanos_tu_correo_para_estar_en_contacto_contigo">Déjanos tu correo para estar en contacto contigo</string>
    <string name="elige_una_contrasena_segura">Elige una contraseña segura</string>
    <string name="cuando_celebramos_tu_dia_especial">¿Cuándo celebramos tu día especial?</string>
    <string name="como_te_identificas">¿Cómo te identificas? Solo si deseas compartirlo</string>
    <string name="apoyo_deseado">¿En qué te gustaría recibir apoyo? (Ejemplo: ansiedad, autoestima, relaciones, etc.)</string>
    <string name="boton_listo">Listo</string>
    <string name="hint_nombre">Tu nombre</string>
    <string name="hint_introduce_correo">Introduce tu correo electrónico</string>
    <string name="hint_apoyo_deseado">¿En qué te gustaría recibir apoyo?</string>
    <string name="hint_contrasena_segura">Elige una contraseña segura</string>
    <string name="selecciona_fecha_especial">Selecciona tu fecha especial</string>
    <string name="nos_alegra_tenerte_aqui">¡NOS ALEGRA TENERTE AQUÍ!</string>
    <string name="estas_en_un_espacio">Estás en un espacio donde eres valioso, escuchado y acompañado</string>
    <string name="iniciar_sesion2">INICIAR SESIÓN</string>
    <string name="biblioteca">BIBLIOTECA DE RECURSOS</string>
    <string name="mensaje_bienestar">Cada pequeño paso hacia el bienestar cuenta. Encuentra aquí lo que tu corazón y mente necesitan hoy.</string>
    <string name="btn_videos_autoayuda">Videos de Autoayuda</string>
    <string name="btn_frases_motivacionales">Frases Motivacionales</string>
    <string name="btn_playlist">Playlist</string>
    <string name="btn_reflexiones">Reflexiones</string>
    <string name="desc_boton_calendario">Botón para abrir el calendario</string>
    <string name="desc_boton_perfil">Botón para ver el perfil del usuario</string>
    <string name="desc_boton_diario">Botón para acceder al diario emocional</string>
    <string name="desc_boton_notificaciones">Botón de notificaciones</string>
    <string name="desc_boton_noticias">Botón de noticias</string>
    <string name="mensaje_videos_autoayuda">Cada video es una luz en tu camino, guiándote hacia el bienestar y la paz interior</string>
    <string name="titulo_videos_autoayuda">VIDEOS DE AUTOAYUDA</string>
    <string name="salir">X</string>
    <string name="titulo_reflexiones">REFLEXIONES</string>
    <string name="titulo_reflexion_1">El peso de un vaso de agua</string>
    <string name="titulo_reflexion_2">La roca en el camino</string>
    <string name="titulo_reflexion_3">El coleccionista de insultos</string>
    <string name="texto_peso_vaso_agua">El peso de un vaso de agua</string>
    <string name="cuento_psicologico">Un psicólogo estaba desarrollando una sesión grupal cuando, de repente, levantó un vaso de agua. Todos esperaban la típica pregunta: “¿Está medio lleno o medio vacío?” Sin embargo, preguntó: – ¿Cuánto pesa este vaso? Las respuestas variaron entre 200 y 250 gramos. El psicólogo les respondió: – El peso absoluto no es importante. Depende de cuánto tiempo lo sostengo. Si lo sostengo un minuto, no representará un problema, pero si lo sostengo durante una hora, me dolerá el brazo. Si lo sostengo todo el día, mi brazo se entumecerá y paralizará. El peso del vaso no ha cambiado, siempre es el mismo. Pero cuanto más tiempo lo sostengo, más pesado y más difícil de soportar se vuelve. Moraleja: Este cuento nos recuerda que las preocupaciones, los pensamientos negativos, los rencores y el resentimiento son como ese vaso de agua. Si los pensamos un rato, no pasa nada. Si los mantenemos todo el día, empiezan a doler. Y si lo hacemos durante toda la semana, nos paralizan. Por eso, debemos aprender a soltar todo aquello que nos daña.</string>
    <string name="titulo_recuerda">Recuerda</string>
    <string name="mensaje_inspirador">Aunque a veces dudes de ti mismo, quiero recordarte algo: eres valioso, fuerte y único. Cada paso que das, por pequeño que sea, es una muestra de tu valentía. No necesitas ser perfecto para ser increíble. Solo necesitas seguir adelante.</string>
    <string name="cancel">CANCELAR</string>
    <string name="pregunta">¿En qué te quieres enfocar?</string>
    <string name="general">General</string>
    <string name="vida">Vida y felicidad</string>
    <string name="favoritos">Tus favoritos</string>
    <string name="amor_propio">Amor propio</string>
    <string name="positividad">Positividad corporal</string>
    <string name="crecimiento">Crecimiento personal</string>
    <string name="agradecimiento">Agradecimiento</string>
    <string name="dificil">Tiempos difíciles</string>
    <string name="frase">No voy a renunciar a ninguno de mis sueños</string>
    <string name="añadir">Añadir</string>
    <string name="categoria">Categoría</string>
    <string name="close">Cerrar</string>
    <string name="empezar_de_cero_contigo">Empezar de cero contigo</string>
    <string name="aqu_estoy_contigo">Aquí estoy contigo</string>
    <string name="no_digas_nada_solo_esc_chalo">No digas nada, solo escúchalo</string>
    <string name="lib_rate">Libérate</string>
    <string name="solo_esc_chalo">Solo escúchalo</string>
    <string name="imagen_relacionada_con_el_concepto_de_liberacion">Imagen relacionada con el concepto de liberación</string>
    <string name="imagen_relacionada_con_el_concepto_de_empezar_de_cero">Imagen relacionada con el concepto de empezar de cero</string>
    <string name="imagen_relacionada_con_el_concepto_de_escuchar">Imagen relacionada con el concepto de escuchar</string>
    <string name="liberate">LIBÉRATE</string>
    <string name="respira_hondo_suelta_lo_que_no_puedes_controlar_y_recuerda_que_mereces_paz_tanto_como_cualquiera">Respira hondo, suelta lo que no puedes controlar, y recuerda que mereces paz tanto como cualquiera.</string>
    <string name="descripcion_texto_accesible">video</string>
    <string name="aunque_hoy_sientas_que_te_estas_rompiendo_por_dentro_recuerda_que_cada_paso_te_hace_mas_fuerte">Aunque hoy sientas que te estás rompiendo por dentro, recuerda que cada paso te hace más fuerte.</string>
    <string name="escribe_tu_reflexion">Escribe tu reflexión</string>
    <string name="ahora_que_has_leido_esta_reflexion_tomate_un_momento_para_mirar_dentro_de_ti_que_pensamientos_desperto_esta_historia_como_se_conecta_con_lo_que_estas_viviendo_escribe_con_libertad">Ahora que has leído esta reflexión, tómate un momento para mirar dentro de ti. ¿Qué pensamientos despertó esta historia? ¿Cómo se conecta con lo que estás viviendo? Escribe con libertad; tus palabras también pueden sanar.</string>
    <string name="guardar_reflexion">Guardar Reflexión</string>
    <string name="mis_reflexiones">Mis Reflexiones</string>
    <string name="mi_reflexion">Mi reflexión</string>
    <string name="la_roca_en_el_camino">La roca en el camino</string>
    <string name="en_un_reino_lejano_hubo_una_vez_un_rey_que_coloc_una_gran_roca_en_medio_del_camino_principal_de_entrada_al_reino_obstaculizando_el_paso_luego_se_escondi_para_ver_si_alguien_la_retiraba"><![CDATA[En un reino lejano, hubo una vez un rey que colocó una gran roca en medio del camino principal de entrada al reino, obstaculizando el paso. Luego se escondió para ver si alguien la retiraba.]]></string>
    <string name="los_comerciantes_m_s_adinerados_del_reino_y_algunos_cortesanos_que_pasaron_simplemente_rodearon_la_roca_muchos_de_ellos_se_quedaron_un_rato_delante_de_la_roca_quej_ndose_y_culparon_al_rey_de_no_mantener_los_caminos_despejados_pero_ninguno_hizo_nada_para_retirar_el_obst_culo"><![CDATA[Los comerciantes más adinerados del reino y algunos cortesanos que pasaron simplemente rodearon la roca. Muchos de ellos se quedaron un rato delante de la roca quejándose, y culparon al rey de no mantener los caminos despejados, pero ninguno hizo nada para retirar el obstáculo.]]></string>
    <string name="entonces_lleg_un_campesino_que_llevaba_una_carga_de_verduras_la_dej_en_el_suelo_y_estudi_la_roca_en_el_camino_observ_ndola_intent_mover_la_roca_empuj_ndola_y_haciendo_palanca_con_una_rama_de_madera_que_encontr_a_un_lado_del_camino_despu_s_de_empujar_y_fatigarse_mucho_finalmente_logr_apartar_la_roca_mientras_recog_a_su_carga_encontr_una_bolsa_justo_en_el_lugar_donde_hab_a_estado_la_roca_la_bolsa_conten_a_una_buena_cantidad_de_monedas_de_oro_y_una_nota_del_rey_indicando_que_esa_era_la_recompensa_para_quien_despejara_el_camino"><![CDATA[Entonces llegó un campesino que llevaba una carga de verduras. La dejó en el suelo y estudió la roca en el camino observándola. Intentó mover la roca empujándola y haciendo palanca con una rama de madera  que encontró a un lado del camino, después de empujar y fatigarse mucho, finalmente logró apartar la roca.  Mientras recogía su carga, encontró una bolsa, justo en el lugar donde había estado la roca. La bolsa contenía una buena cantidad de monedas de oro y una nota del rey, indicando que esa era la recompensa para quien despejara el camino.\n]]></string>
    <string name="salir4">Salir</string>
    <string name="el_campesino_aprendi_lo_que_los_otros_nunca_aprendieron_cada_obst_culo_superado_es_una_oportunidad_para_mejorar_la_propia_condici_n"><![CDATA[El campesino aprendió lo que los otros nunca aprendieron:\n\nCada obstáculo superado es una oportunidad para mejorar la propia condición. ]]></string>
    <string name="frases_diarias_de_reflexi_n">Frases diarias de reflexión</string>
    <string name="d_as_en_tu_diario">Días en tu Diario</string>
    <string name="escribir_en_mi_diario">Escribir en mi diario</string>
    <string name="ver_mis_registros_anteriores">Ver mis registros anteriores</string>
    <string name="diario_de_emociones">DIARIO DE EMOCIONES</string>
    <string name="este_es_tu_espacio_seguro_escribe_con_libertad_sin_juicios_solo_contigo_mismo_cada_palabra_es_un_paso_hacia_tu_bienestar_todo_quedar_guardado_para_que_m_s_adelante_veas_tu_avance_y_te_sientas_orgulloso_de_lo_lejos_que_has_llegado">Este es tu espacio seguro. Escribe con libertad, sin juicios, solo contigo mismo. Cada palabra es un paso hacia tu bienestar. Todo quedará guardado para que más adelante veas tu avance y te sientas orgulloso de lo lejos que has llegado</string>
    <string name="men">Menú</string>
    <string name="_9_d_as_escribiendo_tu_historia_cada_palabra_ha_sido_un_paso_en_tu_camino_de_crecimiento_sigue_adelante_sigue_escribiendo_sigue_creciendo_estamos_aqu_contigo_y_estamos_orgullosos_de_ti">9 días escribiendo tu historia Cada palabra ha sido un paso en tu camino de crecimiento. Sigue adelante, Sigue escribiendo, sigue creciendo. Estamos aquí contigo y estamos orgullosos de ti</string>
    <string name="_9">9</string>
    <string name="TODO">TODO</string>
</resources>