<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"

    tools:context=".biblioteca">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="263dp"
        android:layout_height="101dp"
        android:layout_marginTop="204dp"
        android:fontFamily="@font/old_italic"
        android:gravity="end"
        android:shadowColor="#3F51B5"
        android:text="@string/mensaje_bienestar"
        android:textColor="#253F85"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="247dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#D0DFF0"
        android:elevation="80dp"
        android:fontFamily="@font/old_italic"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/btn_videos_autoayuda"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="261dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#D0DFF0"
        android:elevation="8dp"
        android:fontFamily="@font/old_italic"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/btn_reflexiones"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="261dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D0DFF0"
        android:elevation="8dp"
        android:fontFamily="@font/old_italic"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/btn_frases_motivacionales"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="261dp"
        android:layout_height="51dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="#D0DFF0"
        android:elevation="8dp"
        android:fontFamily="@font/old_italic"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/btn_playlist"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="324dp"
        android:layout_height="73dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/old_italic"
        android:gravity="center"
        android:text="@string/biblioteca"

        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="224dp"
        android:background="@null"
        android:contentDescription="@string/desc_boton_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5"
        app:srcCompat="@drawable/person" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:background="@null"
        android:contentDescription="@string/desc_boton_diario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/imageButton5"
        app:srcCompat="@drawable/diary" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:background="@null"
        android:contentDescription="@string/desc_boton_notificaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/notification" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"

        android:background="@null"
        android:contentDescription="@string/desc_boton_noticias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/news" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:background="@null"
        android:contentDescription="@string/desc_boton_calendario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/calendar" />

</androidx.constraintlayout.widget.ConstraintLayout>