<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo"
    android:padding="24dp">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/old_italic"
        android:text="@string/diario_de_emociones"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="315dp"
        android:layout_height="416dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:fontFamily="@font/carattere"
        android:lineSpacingExtra="6dp"
        android:text="@string/este_es_tu_espacio_seguro_escribe_con_libertad_sin_juicios_solo_contigo_mismo_cada_palabra_es_un_paso_hacia_tu_bienestar_todo_quedar_guardado_para_que_m_s_adelante_veas_tu_avance_y_te_sientas_orgulloso_de_lo_lejos_que_has_llegado"
        android:textColor="#202F71"
        android:textSize="32sp" />


    <Button
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/men"
        android:textColor="#000"
        android:shadowColor="#000"
        android:shadowRadius="5"
        android:fontFamily="@font/old_italic"
        android:layout_marginTop="32dp"
        android:backgroundTint="#CBD8E0"/>
</LinearLayout>
